--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,10 @@ bin-release/
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
+
+
+# Mac
+*.DS_Store
+
+# Generated main page
+index.html
